# latex-templates

./: .gitignore  .latexindent.yaml  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: latex.yml  templates.yml
data/: customers.example.yml
data/invoices/: config.example.toml  example.yml
example/: README.md  config.example.toml  config.example.yml  customer.example.csv  invoices.example.yml  letter.example.md
examples/: README.md  config.example.yml  invoices.example.yml  letter.example.md
invoices/: example.yml
latex_templates/: __init__.py  manage.py  models.py  utils.py
latex_templates/cv/: template.py  utils.py
latex_templates/cv/models/: __init__.py  cv.py
latex_templates/invoice/: template.py  utils.py
latex_templates/invoice/models/: __init__.py  config.py  customer.py  invoice.py  invoices.py  shared.py
schema/: config.json  customer.json  invoices.json
selbststaendigkeit/: manage.py
selbststaendigkeit/models/: config.py  invoice.py
selbststaendigkeit/templates/: invoice.py
selbststaendigkeit/utils/: config.py  models.py
src/: __init__.py  manage.py  models.py  settings.py  utils.py
src/invoice/: template.py  utils.py
src/invoice/models/: __init__.py  customer.py  invoices.py
src/letter/: template.py  utils.py
src/letter/models/: letter.py
src/templates/: invoice.py
template/: base.typ  cv.tex.j2  developercv.cls  invoice.tex.j2  invoice.typ.j2  letter.tex.j2  letter.typ.j2
templates/: invoice.tex
