[tool.poetry]
name = "latex_templates"
version = "0.1.1"
description = "A collection of LaTeX templates."
authors = ["Felix Hoffmann <felix.emmanuel.hoffmann@gmail.com>"]
repository = "https://github.com/felixhoffmnn/latex-templates"
readme = "README.md"
packages = [{ include = "latex_templates" }]

[tool.poetry.dependencies]
python = ">=3.11"
jinja2 = "^3.1.4"
pylatex = "^1.4.2"
fire = "^0.6.0"
loguru = "^0.7.2"

[tool.poetry.group.pydantic.dependencies]
pydantic = "^2.8"
email-validator = "^2.2"
pydantic-extra-types = "^2.8"
phonenumbers = "^8.13"

[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
pre-commit = "^3.7"
mypy = "^1.10"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "PIE", # flake8-pie
    "PGH", # pygrep
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "RUF", # ruff
]
ignore = [
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
